refine-logs/r008/stderr.txt
  File "/tmp/sandbox_bxci2m_t/script.py", line 1
    ```python
    ^
SyntaxError: invalid syntax
